# tray-control

./: .gitmodules  CMakeLists.txt  PKGBUILD  README.md
src/: DBusUtils.h  Errors.h  StatusNotifierItem.cpp  StatusNotifierItem.h  StatusNotifierWatcher.cpp  StatusNotifierWatcher.h  Utils.h  tray-activate.cpp  tray-show.cpp
